<resources>
    <string name="app_name">HomeTask_2</string>
    <string name="home">Home</string>
    <string name="films">Films</string>
    <string name="series">Series</string>
    <string name="books">Books</string>
    <string name="account">Account</string>
    <string name="profile">Profile</string>
    <string name="enter_text">Enter text</string>
    <string name="submit">Submit</string>
    <string name="contact">Films</string>
    <string name="notification">Series</string>
    <string name="p">Books</string>
    <string name="s">Account</string>
</resources>