<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_films"
        android:icon="@drawable/films"
        android:title="@string/films"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_series"
        android:icon="@drawable/series"
        android:title="@string/series"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_books"
        android:icon="@drawable/books"
        android:title="@string/books"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/account"
        android:title="@string/account"
        app:showAsAction="ifRoom" />

</menu>